--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,158 +75,6 @@ body {
     letter-spacing: 1px;
 }
 
-
-/*===================Catalog=============================*/
-.catalog {
-    position: relative;
-    overflow: hidden;
-    margin-block-start: -57px;
-
-    @media(max-width: 860px){
-        margin-block-start: 50px;
-    }
-
-    &__title {
-        padding-block-start: 0px;
-        padding-block-end: 79px;
-        text-align: center;
-
-        @media(max-width: 860px){
-            padding-block-end: 30px;
-            font-size: 32px;
-        }
-
-        @media(max-width: 640px){
-           
-            font-size: 24px;
-        }
-    }
-
-    &__body {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
-
-        @media(max-width: 860px){
-            grid-template-columns: 1fr 1fr;
-        }
-
-        @media(max-width: 640px){
-            grid-template-columns: 1fr;
-        }
-    }
-}
-
-.cards {
-    position: relative;
- 
-    &__item {
-        border: 1px solid rgb(242, 246, 250);
-        border-radius: 10px;
-    }
-    
-    .decor{
-        display: none;
-    }
-    @media(min-width: 1210px){
-        &::before{
-            position: absolute;
-            content: '';
-            width: 250px;
-            height: 250px;
-            top: 80px;
-            left: -165px;
-            background: url('../img/berry.png') 0 0/cover no-repeat;
-            z-index: 2;
-        }
-    
-        &::after{
-            position: absolute;
-            content: '';
-            width: 161px;
-            height: 167px;
-            top: 50%;
-            right: -120px;
-            background: url('../img/leaf.png') 0 0/cover no-repeat;
-            z-index: 2;
-        }
-    
-        .decor {
-            display: block;
-            position: absolute;
-            content: '';
-            width: 109px;
-            height: 113px;
-            bottom: 450px;
-            left: -100px;
-            transform: rotate(-90deg);
-            background: url('../img/leaf.png') 0 0/cover no-repeat;
-            z-index: 2;
-        }
-    }
-    
-}
-
-.item-card {
-    display: flex;
-    flex-direction: column;
-
-    &__image {
-       // border-radius: 10px;
-       border-start-start-radius: 10px;
-       border-start-end-radius: 10px;
-        overflow: hidden;
-        max-width: 100%;
-        min-height: 245px;
-        position: relative;
-    }
-
-    &__body {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        padding-inline: 44px;
-        padding-block: 48px;
-
-        @media(max-width: 1024px){
-            padding-inline: 20px;
-            padding-block: 40px;
-        }
-
-        @media(max-width: 640px){
-            padding-inline: 15px;
-            padding-block: 20px;
-        }
-    }
-
-    &__name {
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 1.43;
-        //margin-inline-end: 12px;
-        padding-block-end: 13px;
-    }
-
-    &__description {
-        flex-grow: 1;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        padding-block-end: 23px;
-
-        @media(max-width: 640px){
-            padding-block-end: 12px;
-        }
-    }
-
-    &__price {
-        font-size: 24px;
-        font-weight: 500;
-        line-height: 1.5;
-        padding-block-end: 16px;
-    }
-
-}
 /*================================================*/
 
 .header {
@@ -380,7 +228,7 @@ body {
     }
 }
 
-
+/*================================================*/
 
 .main {
     position: relative;
@@ -473,6 +321,158 @@ body {
     }
 }
 
+/*===================Catalog=============================*/
+.catalog {
+    position: relative;
+    overflow: hidden;
+    margin-block-start: -57px;
+
+    @media(max-width: 860px){
+        margin-block-start: 50px;
+    }
+
+    &__title {
+        padding-block-start: 0px;
+        padding-block-end: 79px;
+        text-align: center;
+
+        @media(max-width: 860px){
+            padding-block-end: 30px;
+            font-size: 32px;
+        }
+
+        @media(max-width: 640px){
+           
+            font-size: 24px;
+        }
+    }
+
+    &__body {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+
+        @media(max-width: 860px){
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @media(max-width: 640px){
+            grid-template-columns: 1fr;
+        }
+    }
+}
+
+.cards {
+    position: relative;
+ 
+    &__item {
+        border: 1px solid rgb(242, 246, 250);
+        border-radius: 10px;
+    }
+    
+    .decor{
+        display: none;
+    }
+    @media(min-width: 1210px){
+        &::before{
+            position: absolute;
+            content: '';
+            width: 250px;
+            height: 250px;
+            top: 80px;
+            left: -165px;
+            background: url('../img/berry.png') 0 0/cover no-repeat;
+            z-index: 2;
+        }
+    
+        &::after{
+            position: absolute;
+            content: '';
+            width: 161px;
+            height: 167px;
+            top: 50%;
+            right: -120px;
+            background: url('../img/leaf.png') 0 0/cover no-repeat;
+            z-index: 2;
+        }
+    
+        .decor {
+            display: block;
+            position: absolute;
+            content: '';
+            width: 109px;
+            height: 113px;
+            bottom: 450px;
+            left: -100px;
+            transform: rotate(-90deg);
+            background: url('../img/leaf.png') 0 0/cover no-repeat;
+            z-index: 2;
+        }
+    }
+    
+}
+
+.item-card {
+    display: flex;
+    flex-direction: column;
+
+    &__image {
+       // border-radius: 10px;
+       border-start-start-radius: 10px;
+       border-start-end-radius: 10px;
+        overflow: hidden;
+        max-width: 100%;
+        min-height: 245px;
+        position: relative;
+    }
+
+    &__body {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        padding-inline: 44px;
+        padding-block: 48px;
+
+        @media(max-width: 1024px){
+            padding-inline: 20px;
+            padding-block: 40px;
+        }
+
+        @media(max-width: 640px){
+            padding-inline: 15px;
+            padding-block: 20px;
+        }
+    }
+
+    &__name {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1.43;
+        //margin-inline-end: 12px;
+        padding-block-end: 13px;
+    }
+
+    &__description {
+        flex-grow: 1;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding-block-end: 23px;
+
+        @media(max-width: 640px){
+            padding-block-end: 12px;
+        }
+    }
+
+    &__price {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 1.5;
+        padding-block-end: 16px;
+    }
+
+}
+
 /*================================================*/
 
 .order-from-mobile {
@@ -540,6 +540,18 @@ body {
                 height: 36.655%;
                 background: url('img/02\ 1.png') 0 0 /cover no-repeat;
             }
+            &::before {
+                position: absolute;
+                content: '';
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 20%;
+                background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+                z-index: 2;
+                transform: rotate(180deg);
+            }
+            
         }
     }
     
@@ -587,6 +599,17 @@ body {
         @media(max-width: 860px){
             padding-inline: 15px;
             max-width: 100%;
+            position: relative;
+            &::before {
+                position: absolute;
+                content: '';
+                top: -25px;
+                left: 0;
+                width: 100%;
+                height: 20%;
+                background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+                z-index: 2;
+            }
         }
 
     }
@@ -598,11 +621,7 @@ body {
     }
 
     &__title {
-
-        //font-size: 48px;
         color: #fff;
-        //font-weight: 500;
-        //letter-spacing: -1px;
         line-height: 60px;
         margin-block-end: 24px;
 
@@ -610,19 +629,19 @@ body {
             font-size: 40px;
             line-height: 1.2;
         }
+        @media(max-width: 860px){
+            font-size: 32px;
+        }
     }
 
     &__text {
         color: #fff;
         font-size: 21px;
-        //line-height: 1.37;
         line-height: 1.4;
         letter-spacing: -0.2px;
         margin-block-end: 43px;
         text-shadow: 1px 1px #081130; 
-    }
-
-    
+    }  
 }
 
 /*================================================*/
@@ -658,11 +677,16 @@ body {
         padding-block-end: 167px;
        //pixel-perfect
         .image {
+            
             left: -5px;
             top: -5px;
             @media(max-width: 860px){
+                object-position: top;
                 top: 0;
                 left: 0;
+            }
+            @media(max-width: 640px){
+                object-position: center;
             }
         }
         
@@ -690,6 +714,11 @@ body {
     &__title {
         margin-block-end: 34px;
         line-height: 60.5px;
+
+        @media(max-width: 860px){
+            font-size: 32px;
+            line-height: 1.2;
+        }
     }
 
     &__item {
@@ -726,6 +755,9 @@ body {
 
     @media(max-width: 1210px){
         margin-inline-start: -15;
+    }
+    @media(max-width: 640px){
+        margin-inline-start: 5px;
     }
     &__name {
         display: inline-block;
@@ -770,7 +802,7 @@ body {
 /*================================================*/
 
 .reviews {
-    padding-block-start: 250px;
+    padding-block-start: 248px;
     background: #081130;
     overflow: hidden;
 
@@ -780,6 +812,11 @@ body {
         margin-block-end: 82px;
         text-align: center;
         color: #fff;
+
+        @media(max-width: 860px){
+            font-size: 32px;
+            margin-block-end: 40px;
+        }
     }
 
     &::before {
@@ -893,8 +930,8 @@ body {
         }
 
     &__title {
-        padding-block-start: 65px;
-        padding-block-end: 24px;
+        padding-block-start: 60px;
+        padding-block-end: 23px;
 
         font-size: 30px;
         font-weight: 500;
@@ -933,7 +970,7 @@ body {
         height: 380px;
         border-radius: 50%;
         overflow: hidden;
-        margin-block-end: 30px;
+        margin-block-end: 25px;
 
         @media (max-width: 1200px) {
             width: 200px;
@@ -971,8 +1008,7 @@ body {
         width: 100%;
         height: 100%;
         top: 0;
-        background: url('/img/arrow.png') center no-repeat;
-        
+        background: url('/img/arrow.png') center no-repeat;  
     }
 
     &:hover {
@@ -1014,12 +1050,20 @@ body {
 .galery {
 
     &__container {
-        margin-block-end: 80px;
+        margin-block-end: 82px;
+
+        @media(max-width: 860px){
+            margin-block-end: 40px;
+        }
     }
 
     &__title {
         text-align: center;
-        margin-block-end: 13px;
+        margin-block-end: 15px;
+
+        @media(max-width: 860px){
+            font-size: 32px;
+        }
     }
 
     &__text {
@@ -1051,19 +1095,17 @@ body {
             flex: 1 1 100%;
             padding-block: 40%;
         }
-
-        
     }
-
 }
 
 /*================================================*/
 
 .footer {
     background: #081130;
-    padding-block-start: 300px;
+    padding-block-start: 315px;
     padding-block-end: 80px;
     position: relative;
+    overflow: hidden;
     &::before {
         position: absolute;
         content: '';
@@ -1079,13 +1121,72 @@ body {
         padding-inline: 99px;
         padding-block: 70px;
         border-radius: 8px;
+        position: relative;
+        
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+            transform: rotate(90deg);
+        }
+        &::before {
+            top: -80px;
+            left: -100px;
+            width: 135px;
+            height: 135px;
+            background: url('/img/leaf.png') 0 0 /cover no-repeat;
+           
+        }
+
+        &::after {
+            top: -110px;
+            right: -140px;
+            width: 220px;
+            height: 220px;
+            background: url('/img/berry.png') 0 0 /cover no-repeat;
+            
+        }
+        span {
+            
+            bottom: 0;
+            left: 0;
+
+               &::before,
+               &::after {
+                position: absolute;
+                content: '';
+               }
+               &::before {
+                bottom: -120px;
+                right: -150px;
+                width: 200px;
+                height: 200px;
+                background: url('/img/leaf.png') 0 0 /cover no-repeat;
+                transform: rotate(-100deg);
+            }
+    
+            &::after {
+                bottom: -140px;
+                left: -190px;
+                width: 260px;
+                height: 250px;
+                background: url('/img/berry.png') 0 0 /cover no-repeat;
+                transform: rotate(-70deg);
+            }
+        }
 
         @media(max-width: 1200px){
             padding-inline: 20px;
-        
-        }
+            margin-inline: 15px;
 
-       
+            &::before,
+            &::after{
+                content: none;
+            }
+            span {
+                display: none;
+            }
+        }
     }
 
     &__title {
@@ -1094,6 +1195,10 @@ body {
         line-height: 1.33;
         text-align: center;
         margin-block-end: 12px;
+        
+        @media(max-width: 1200px){
+            font-size: 32px;
+        }
     }
 
     &__text {
@@ -1104,11 +1209,9 @@ body {
         margin-block-end: 38px;
     }
 
-    &__form {
-    }
-
     &__links {
         padding-block: 80px;
+        padding-inline: 15px;
         margin-inline: auto;
         display: flex;
         max-width: 800px;
@@ -1128,8 +1231,6 @@ body {
     }
 }
 .form-order {
-    
-    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -1148,10 +1249,7 @@ body {
             top: 36px;
             left: 31.5px;
             background: url(/img/phone-input.svg) center / cover no-repeat;  
-        }
-        
-        
-        
+        } 
     }
 
     &__phone {
@@ -1162,131 +1260,48 @@ body {
         background: #F2F6FA;
         padding-inline-start: 58px;
         padding-inline-end: 30px;
+
         &::placeholder{
             color: #7E868E;
             font-size: 15px;
             line-height: 1.6;
-            
         }
 
-       &:hover {
-        & + svg path {
-            fill: #2E363E;
-        }
+        &:hover {
+
+            & + svg path {
+                fill: #2E363E;
+            }
 
             &::placeholder {
                 color: #2E363E;
-            }
-            
-            
-        }
-        &:focus{
+            }   
+       }
+
+       &:focus{
             & + svg path {
                 fill: #2E363E;
             }
             
             border: 1px solid #FED84C;
-        }
-            
+        }      
     }
 
     &__button {
         flex: 1 1 50%;
         max-width: 380px;
     }
-}
- /*   &__agreement {
-        
-        display: grid;
-        grid-template-columns: auto auto;
-        gap: 5px;
-        @media(max-width: 775px){
-            grid-template-columns: 1fr;
-        }
-    }
-
-    &__agreement-label {
-       display: grid;
-       grid-template-columns: 12px 1fr;
-       gap: 7px;
-       align-items: center;
-        input {
-            display: none;
-        }
-
-        span {
-            flex: 0 0 12px;
-            height: 12px;
-            border-radius: 2px;
-            background: #4A94FF;
-        }
-
-        &:hover {
-            span {
-                background: #65a5fd;
-            }
-            
-        }
-
-    }
-    &__agreement-text {
-        
-       
-        
-    }
-    &__agreement-link {
-        
-        text-decoration: underline;
-        &:hover {
-            color: #2E363E;
-        }
-    }
-}
-
-.--checked {
-    span {
-        background: #4A94FF;
-        position: relative;
-        &::before {
-            position: absolute;
-            content: '';
-            width: 1px;
-            height: 3px;
-            top: 5px;
-            left: 3.5px;
-            background: #fff;
-            transform: rotate(-45deg);
-        }
-        &::after {
-            position: absolute;
-            content: '';
-            width: 1px;
-            height: 6px;
-            top: 2px;
-            left: 6.5px;
-            background: #fff;
-            transform: rotate(45deg);
-        }
-    }
-}
-*/
-
-.form-order {
 
     &__agreement {
         text-align: center;
     }
 
     &__agreement-label {
-        
-        
         padding-left: 19px;
         font-size: 11px;
         line-height: 1.3;
-        input {
-         display: none;   
-        }
         position: relative;
+
         &::before {
             position: absolute;
             content: '';
@@ -1302,8 +1317,11 @@ body {
             &::before {
                 
                 background: #80b3fa;
-            }
-            
+            }  
+        }
+
+        input {
+         display: none;   
         }
     }
 
@@ -1316,6 +1334,8 @@ body {
         }
     }
 }
+
+
 .--checked {
     &::before {
         position: absolute;
@@ -1339,6 +1359,4 @@ body {
     }
 
 
-}
-.input-checkbox {
 }
