--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,217 @@ body {
   letter-spacing: 1px;
 }
 
+/*================================================*/
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-block-start: 37px;
+  padding-block-end: 30px;
+  color: #fff;
+  border-bottom: 1px solid #7E868E;
+  z-index: 2;
+}
+
+.header-body {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 15px;
+}
+.header-body__name {
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 143%;
+  letter-spacing: 0%;
+  display: flex;
+  align-items: center;
+}
+.header-body__contacts {
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+
+.contacts-header__adress {
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+.adress-block {
+  display: flex;
+  gap: 12px;
+}
+@media (min-width: 1023.99px) {
+  .adress-block:hover {
+    color: #FED84C;
+  }
+  .adress-block:hover svg path {
+    fill: #FED84C;
+  }
+}
+.adress-block:active {
+  color: #f8c819;
+}
+.adress-block:active svg path {
+  fill: #f8c819;
+}
+
+.header-contact {
+  display: flex;
+  gap: 15px;
+}
+.header-contact__icon {
+  display: block;
+  margin-block-start: 5px;
+  margin-right: -2px;
+}
+.header-contact__phone {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.4;
+  text-align: right;
+}
+.header-contact__times {
+  font-size: 13px;
+  line-height: 1.6;
+  text-align: right;
+}
+@media (min-width: 1023.99px) {
+  .header-contact:hover {
+    color: #FED84C;
+  }
+  .header-contact:hover svg path {
+    fill: #FED84C;
+  }
+}
+.header-contact:active {
+  color: #f8c819;
+}
+.header-contact:active svg path {
+  fill: #f8c819;
+}
+
+@media (max-width: 679.99px) {
+  .header {
+    padding-block: 15px;
+  }
+  .header-body__contacts {
+    gap: 20px;
+  }
+  .header-body__name {
+    font-size: 18px;
+  }
+  .adress-block__icon {
+    width: 41px;
+    height: 41px;
+  }
+  .header-contact__icon {
+    margin-block: 0;
+    width: 30px;
+    height: 30px;
+  }
+  .header-contact__text,
+  .adress-block__text {
+    display: none;
+  }
+}
+/*================================================*/
+.main {
+  position: relative;
+  padding-block-start: 118.5px;
+}
+.main__bg {
+  z-index: -2;
+}
+@media (max-width: 860px) {
+  .main__bg {
+    filter: brightness(40%);
+  }
+}
+.main__body {
+  padding-block-start: 188px;
+  padding-block-end: 525px;
+}
+@media (max-width: 860px) {
+  .main__body {
+    padding-block-start: 60px;
+    padding-block-end: 150px;
+  }
+}
+@media (max-width: 680px) {
+  .main__body {
+    padding-block-start: 50px;
+    padding-block-end: 60px;
+  }
+}
+
+.content-body {
+  max-width: 647px;
+}
+@media (max-width: 860px) {
+  .content-body {
+    max-width: 480px;
+  }
+}
+.content-body__title {
+  padding-block: 23px;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  color: #fff;
+}
+@media (max-width: 860px) {
+  .content-body__title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 680px) {
+  .content-body__title {
+    font-size: 32px;
+    line-height: 1.5;
+  }
+}
+.content-body__subtitle {
+  padding-block-end: 42px;
+  font-size: 24px;
+  line-height: 1.43;
+  color: #fff;
+}
+@media (max-width: 860px) {
+  .content-body__subtitle {
+    font-size: 18px;
+  }
+}
+@media (max-width: 680px) {
+  .content-body__subtitle {
+    font-size: 14px;
+  }
+}
+.content-body__btn-and-text {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+@media (max-width: 860px) {
+  .content-body__btn-and-text {
+    flex-direction: column;
+    align-items: start;
+  }
+}
+.content-body__text {
+  max-width: 150px;
+  color: #fff;
+  font-size: 15px;
+  line-height: 1.5;
+}
+@media (max-width: 860px) {
+  .content-body__text {
+    max-width: 100%;
+  }
+}
+
 /*===================Catalog=============================*/
 .catalog {
   position: relative;
@@ -269,216 +480,6 @@ body {
 }
 
 /*================================================*/
-.header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding-block-start: 37px;
-  padding-block-end: 30px;
-  color: #fff;
-  border-bottom: 1px solid #7E868E;
-  z-index: 2;
-}
-
-.header-body {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 15px;
-}
-.header-body__name {
-  font-size: 21px;
-  font-weight: 500;
-  line-height: 143%;
-  letter-spacing: 0%;
-  display: flex;
-  align-items: center;
-}
-.header-body__contacts {
-  display: flex;
-  align-items: center;
-  gap: 90px;
-}
-
-.contacts-header__adress {
-  font-size: 12px;
-  line-height: 1.5;
-}
-
-.adress-block {
-  display: flex;
-  gap: 12px;
-}
-@media (min-width: 1023.99px) {
-  .adress-block:hover {
-    color: #FED84C;
-  }
-  .adress-block:hover svg path {
-    fill: #FED84C;
-  }
-}
-.adress-block:active {
-  color: #f8c819;
-}
-.adress-block:active svg path {
-  fill: #f8c819;
-}
-
-.header-contact {
-  display: flex;
-  gap: 15px;
-}
-.header-contact__icon {
-  display: block;
-  margin-block-start: 5px;
-  margin-right: -2px;
-}
-.header-contact__phone {
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 1.4;
-  text-align: right;
-}
-.header-contact__times {
-  font-size: 13px;
-  line-height: 1.6;
-  text-align: right;
-}
-@media (min-width: 1023.99px) {
-  .header-contact:hover {
-    color: #FED84C;
-  }
-  .header-contact:hover svg path {
-    fill: #FED84C;
-  }
-}
-.header-contact:active {
-  color: #f8c819;
-}
-.header-contact:active svg path {
-  fill: #f8c819;
-}
-
-@media (max-width: 679.99px) {
-  .header {
-    padding-block: 15px;
-  }
-  .header-body__contacts {
-    gap: 20px;
-  }
-  .header-body__name {
-    font-size: 18px;
-  }
-  .adress-block__icon {
-    width: 41px;
-    height: 41px;
-  }
-  .header-contact__icon {
-    margin-block: 0;
-    width: 30px;
-    height: 30px;
-  }
-  .header-contact__text,
-  .adress-block__text {
-    display: none;
-  }
-}
-.main {
-  position: relative;
-  padding-block-start: 118.5px;
-}
-.main__bg {
-  z-index: -2;
-}
-@media (max-width: 860px) {
-  .main__bg {
-    filter: brightness(40%);
-  }
-}
-.main__body {
-  padding-block-start: 188px;
-  padding-block-end: 525px;
-}
-@media (max-width: 860px) {
-  .main__body {
-    padding-block-start: 60px;
-    padding-block-end: 150px;
-  }
-}
-@media (max-width: 680px) {
-  .main__body {
-    padding-block-start: 50px;
-    padding-block-end: 60px;
-  }
-}
-
-.content-body {
-  max-width: 647px;
-}
-@media (max-width: 860px) {
-  .content-body {
-    max-width: 480px;
-  }
-}
-.content-body__title {
-  padding-block: 23px;
-  font-size: 48px;
-  line-height: 60px;
-  font-weight: 700;
-  letter-spacing: -1px;
-  color: #fff;
-}
-@media (max-width: 860px) {
-  .content-body__title {
-    font-size: 40px;
-  }
-}
-@media (max-width: 680px) {
-  .content-body__title {
-    font-size: 32px;
-    line-height: 1.5;
-  }
-}
-.content-body__subtitle {
-  padding-block-end: 42px;
-  font-size: 24px;
-  line-height: 1.43;
-  color: #fff;
-}
-@media (max-width: 860px) {
-  .content-body__subtitle {
-    font-size: 18px;
-  }
-}
-@media (max-width: 680px) {
-  .content-body__subtitle {
-    font-size: 14px;
-  }
-}
-.content-body__btn-and-text {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-@media (max-width: 860px) {
-  .content-body__btn-and-text {
-    flex-direction: column;
-    align-items: start;
-  }
-}
-.content-body__text {
-  max-width: 150px;
-  color: #fff;
-  font-size: 15px;
-  line-height: 1.5;
-}
-@media (max-width: 860px) {
-  .content-body__text {
-    max-width: 100%;
-  }
-}
-
-/*================================================*/
 .order-from-mobile {
   padding-block-start: 15.625%;
   background: #081130;
@@ -532,6 +533,17 @@ body {
     height: 36.655%;
     background: url("img/02 1.png") 0 0/cover no-repeat;
   }
+  .order-from-mobile__image::before {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+    z-index: 2;
+    transform: rotate(180deg);
+  }
 }
 .order-from-mobile__content {
   max-width: 610px;
@@ -570,6 +582,17 @@ body {
   .order-from-mobile__content {
     padding-inline: 15px;
     max-width: 100%;
+    position: relative;
+  }
+  .order-from-mobile__content::before {
+    position: absolute;
+    content: "";
+    top: -25px;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+    z-index: 2;
   }
 }
 
@@ -585,6 +608,11 @@ body {
   .info-mobile-order__title {
     font-size: 40px;
     line-height: 1.2;
+  }
+}
+@media (max-width: 860px) {
+  .info-mobile-order__title {
+    font-size: 32px;
   }
 }
 .info-mobile-order__text {
@@ -637,8 +665,16 @@ body {
 }
 @media (max-width: 860px) {
   .confectionery__image .image {
+    -o-object-position: top;
+       object-position: top;
     top: 0;
     left: 0;
+  }
+}
+@media (max-width: 640px) {
+  .confectionery__image .image {
+    -o-object-position: center;
+       object-position: center;
   }
 }
 @media (max-width: 1210px) {
@@ -664,6 +700,12 @@ body {
 .info-confectionery__title {
   margin-block-end: 34px;
   line-height: 60.5px;
+}
+@media (max-width: 860px) {
+  .info-confectionery__title {
+    font-size: 32px;
+    line-height: 1.2;
+  }
 }
 .info-confectionery__item {
   position: relative;
@@ -695,6 +737,11 @@ body {
 @media (max-width: 1210px) {
   .about-confectionery {
     margin-inline-start: -15;
+  }
+}
+@media (max-width: 640px) {
+  .about-confectionery {
+    margin-inline-start: 5px;
   }
 }
 .about-confectionery__name {
@@ -735,7 +782,7 @@ body {
 
 /*================================================*/
 .reviews {
-  padding-block-start: 250px;
+  padding-block-start: 248px;
   background: #081130;
   overflow: hidden;
   position: relative;
@@ -744,6 +791,12 @@ body {
   margin-block-end: 82px;
   text-align: center;
   color: #fff;
+}
+@media (max-width: 860px) {
+  .reviews__title {
+    font-size: 32px;
+    margin-block-end: 40px;
+  }
 }
 .reviews::before {
   position: absolute;
@@ -848,8 +901,8 @@ body {
   background: url("../img/quotes.png") 100% no-repeat;
 }
 .text-review__title {
-  padding-block-start: 65px;
-  padding-block-end: 24px;
+  padding-block-start: 60px;
+  padding-block-end: 23px;
   font-size: 30px;
   font-weight: 500;
   line-height: 1.43;
@@ -887,7 +940,7 @@ body {
   height: 380px;
   border-radius: 50%;
   overflow: hidden;
-  margin-block-end: 30px;
+  margin-block-end: 25px;
 }
 @media (max-width: 1200px) {
   .photo-review__image {
@@ -959,11 +1012,21 @@ body {
 
 /*================================================*/
 .galery__container {
-  margin-block-end: 80px;
+  margin-block-end: 82px;
+}
+@media (max-width: 860px) {
+  .galery__container {
+    margin-block-end: 40px;
+  }
 }
 .galery__title {
   text-align: center;
-  margin-block-end: 13px;
+  margin-block-end: 15px;
+}
+@media (max-width: 860px) {
+  .galery__title {
+    font-size: 32px;
+  }
 }
 .galery__text {
   text-align: center;
@@ -996,9 +1059,10 @@ body {
 /*================================================*/
 .footer {
   background: #081130;
-  padding-block-start: 300px;
+  padding-block-start: 315px;
   padding-block-end: 80px;
   position: relative;
+  overflow: hidden;
 }
 .footer::before {
   position: absolute;
@@ -1015,10 +1079,61 @@ body {
   padding-inline: 99px;
   padding-block: 70px;
   border-radius: 8px;
+  position: relative;
+}
+.footer__container::before, .footer__container::after {
+  position: absolute;
+  content: "";
+  transform: rotate(90deg);
+}
+.footer__container::before {
+  top: -80px;
+  left: -100px;
+  width: 135px;
+  height: 135px;
+  background: url("/img/leaf.png") 0 0/cover no-repeat;
+}
+.footer__container::after {
+  top: -110px;
+  right: -140px;
+  width: 220px;
+  height: 220px;
+  background: url("/img/berry.png") 0 0/cover no-repeat;
+}
+.footer__container span {
+  bottom: 0;
+  left: 0;
+}
+.footer__container span::before, .footer__container span::after {
+  position: absolute;
+  content: "";
+}
+.footer__container span::before {
+  bottom: -120px;
+  right: -150px;
+  width: 200px;
+  height: 200px;
+  background: url("/img/leaf.png") 0 0/cover no-repeat;
+  transform: rotate(-100deg);
+}
+.footer__container span::after {
+  bottom: -140px;
+  left: -190px;
+  width: 260px;
+  height: 250px;
+  background: url("/img/berry.png") 0 0/cover no-repeat;
+  transform: rotate(-70deg);
 }
 @media (max-width: 1200px) {
   .footer__container {
     padding-inline: 20px;
+    margin-inline: 15px;
+  }
+  .footer__container::before, .footer__container::after {
+    content: none;
+  }
+  .footer__container span {
+    display: none;
   }
 }
 .footer__title {
@@ -1027,6 +1142,11 @@ body {
   line-height: 1.33;
   text-align: center;
   margin-block-end: 12px;
+}
+@media (max-width: 1200px) {
+  .footer__title {
+    font-size: 32px;
+  }
 }
 .footer__text {
   text-align: center;
@@ -1037,6 +1157,7 @@ body {
 }
 .footer__links {
   padding-block: 80px;
+  padding-inline: 15px;
   margin-inline: auto;
   display: flex;
   max-width: 800px;
@@ -1111,82 +1232,6 @@ body {
   flex: 1 1 50%;
   max-width: 380px;
 }
-
-/*   &__agreement {
-
-        display: grid;
-        grid-template-columns: auto auto;
-        gap: 5px;
-        @media(max-width: 775px){
-            grid-template-columns: 1fr;
-        }
-    }
-
-    &__agreement-label {
-       display: grid;
-       grid-template-columns: 12px 1fr;
-       gap: 7px;
-       align-items: center;
-        input {
-            display: none;
-        }
-
-        span {
-            flex: 0 0 12px;
-            height: 12px;
-            border-radius: 2px;
-            background: #4A94FF;
-        }
-
-        &:hover {
-            span {
-                background: #65a5fd;
-            }
-
-        }
-
-    }
-    &__agreement-text {
-
-
-
-    }
-    &__agreement-link {
-
-        text-decoration: underline;
-        &:hover {
-            color: #2E363E;
-        }
-    }
-}
-
-.--checked {
-    span {
-        background: #4A94FF;
-        position: relative;
-        &::before {
-            position: absolute;
-            content: '';
-            width: 1px;
-            height: 3px;
-            top: 5px;
-            left: 3.5px;
-            background: #fff;
-            transform: rotate(-45deg);
-        }
-        &::after {
-            position: absolute;
-            content: '';
-            width: 1px;
-            height: 6px;
-            top: 2px;
-            left: 6.5px;
-            background: #fff;
-            transform: rotate(45deg);
-        }
-    }
-}
-*/
 .form-order__agreement {
   text-align: center;
 }
@@ -1195,9 +1240,6 @@ body {
   font-size: 11px;
   line-height: 1.3;
   position: relative;
-}
-.form-order__agreement-label input {
-  display: none;
 }
 .form-order__agreement-label::before {
   position: absolute;
@@ -1211,6 +1253,9 @@ body {
 }
 .form-order__agreement-label:hover::before {
   background: #80b3fa;
+}
+.form-order__agreement-label input {
+  display: none;
 }
 .form-order__agreement-link {
   text-decoration: underline;
