--- a/scss/style.scss
+++ b/scss/style.scss
@@ -494,7 +494,7 @@ body {
         width: 100%;
         //height: 330px;
         height: 24.737%;
-        background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+        background: url("../img/01\ 1.png") 0 0/cover no-repeat;
     }
 
     &::after {
@@ -505,7 +505,7 @@ body {
         width: 100%;
         //height: 489px;
         height: 36.655%;
-        background: url(../img/02\ 1.png) 0 0 /cover no-repeat;
+        background: url("../img/02\ 1.png") 0 0 /cover no-repeat;
 
     }
 
@@ -547,7 +547,7 @@ body {
                 left: 0;
                 width: 100%;
                 height: 20%;
-                background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+                background: url("../img/01\ 1.png") 0 0/cover no-repeat;
                 z-index: 2;
                 transform: rotate(180deg);
             }
@@ -607,7 +607,7 @@ body {
                 left: 0;
                 width: 100%;
                 height: 20%;
-                background: url(../img/01\ 1.png) 0 0/cover no-repeat;
+                background: url("../img/01\ 1.png") 0 0/cover no-repeat;
                 z-index: 2;
             }
         }
@@ -826,7 +826,7 @@ body {
         height: 330px;
         left: 0;
         top: -54px;
-        background: url("/img/01\ 1.png") 0 0/cover no-repeat;
+        background: url("../img/01\ 1.png") 0 0/cover no-repeat;
     }
 
     &::after {
@@ -836,7 +836,7 @@ body {
         height: 284px;
         left: 0;
         bottom: 0;
-        background: url("/img/01\ 1.png") 0 0/cover no-repeat;
+        background: url("../img/01\ 1.png") 0 0/cover no-repeat;
         transform: rotate(180deg);
     }
 }
@@ -887,7 +887,7 @@ body {
         height: 220px;
         right: -125px;
         top: -40px;
-        background: url('/img/berry.png') 0 0 /cover no-repeat;
+        background: url('../img/berry.png') 0 0 /cover no-repeat;
         transform: rotate(-90deg);
 
         @media (max-width: 860px) {
@@ -1008,7 +1008,7 @@ body {
         width: 100%;
         height: 100%;
         top: 0;
-        background: url('/img/arrow.png') center no-repeat;  
+        background: url("../img/arrow.png") center no-repeat;  
     }
 
     &:hover {
@@ -1113,7 +1113,7 @@ body {
         height: 330px;
         left: 0;
         top: 0;
-        background: url("/img/01\ 1.png") 0 0/cover no-repeat;
+        background: url("../img/01\ 1.png") 0 0/cover no-repeat;
     }
     &__container {
         max-width: 1180px;
@@ -1134,7 +1134,7 @@ body {
             left: -100px;
             width: 135px;
             height: 135px;
-            background: url('/img/leaf.png') 0 0 /cover no-repeat;
+            background: url("../img/leaf.png") 0 0 /cover no-repeat;
            
         }
 
@@ -1143,7 +1143,7 @@ body {
             right: -140px;
             width: 220px;
             height: 220px;
-            background: url('/img/berry.png') 0 0 /cover no-repeat;
+            background: url("../img/berry.png") 0 0 /cover no-repeat;
             
         }
         span {
@@ -1161,7 +1161,7 @@ body {
                 right: -150px;
                 width: 200px;
                 height: 200px;
-                background: url('/img/leaf.png') 0 0 /cover no-repeat;
+                background: url("../img/leaf.png") 0 0 /cover no-repeat;
                 transform: rotate(-100deg);
             }
     
@@ -1170,7 +1170,7 @@ body {
                 left: -190px;
                 width: 260px;
                 height: 250px;
-                background: url('/img/berry.png') 0 0 /cover no-repeat;
+                background: url("../img/berry.png") 0 0 /cover no-repeat;
                 transform: rotate(-70deg);
             }
         }
@@ -1248,7 +1248,7 @@ body {
             height: 14px;
             top: 36px;
             left: 31.5px;
-            background: url(/img/phone-input.svg) center / cover no-repeat;  
+            background: url("../img/phone-input.svg") center / cover no-repeat;  
         } 
     }
 
