--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ body {
   left: 0;
   width: 100%;
   height: 24.737%;
-  background: url("../img/01 1.png") 0 0/cover no-repeat;
+  background: url("../img/down.png") 0 0/cover no-repeat;
 }
 .order-from-mobile::after {
   position: absolute;
@@ -504,7 +504,7 @@ body {
   left: 0;
   width: 100%;
   height: 36.655%;
-  background: url("../img/02 1.png") 0 0/cover no-repeat;
+  background: url("../img/up.png") 0 0/cover no-repeat;
 }
 @media (max-width: 860px) {
   .order-from-mobile {
@@ -531,7 +531,7 @@ body {
     left: 0;
     width: 100%;
     height: 36.655%;
-    background: url("img/02 1.png") 0 0/cover no-repeat;
+    background: url("../img/up.png") 0 0/cover no-repeat;
   }
   .order-from-mobile__image::before {
     position: absolute;
@@ -540,7 +540,7 @@ body {
     left: 0;
     width: 100%;
     height: 20%;
-    background: url("../img/01 1.png") 0 0/cover no-repeat;
+    background: url("../img/down.png") 0 0/cover no-repeat;
     z-index: 2;
     transform: rotate(180deg);
   }
@@ -591,7 +591,7 @@ body {
     left: 0;
     width: 100%;
     height: 20%;
-    background: url("../img/01 1.png") 0 0/cover no-repeat;
+    background: url("../img/down.png") 0 0/cover no-repeat;
     z-index: 2;
   }
 }
@@ -805,7 +805,7 @@ body {
   height: 330px;
   left: 0;
   top: -54px;
-  background: url("../img/01 1.png") 0 0/cover no-repeat;
+  background: url("../img/down.png") 0 0/cover no-repeat;
 }
 .reviews::after {
   position: absolute;
@@ -814,7 +814,7 @@ body {
   height: 284px;
   left: 0;
   bottom: 0;
-  background: url("../img/01 1.png") 0 0/cover no-repeat;
+  background: url("../img/down.png") 0 0/cover no-repeat;
   transform: rotate(180deg);
 }
 
@@ -1071,7 +1071,7 @@ body {
   height: 330px;
   left: 0;
   top: 0;
-  background: url("../img/01 1.png") 0 0/cover no-repeat;
+  background: url("../img/down.png") 0 0/cover no-repeat;
 }
 .footer__container {
   max-width: 1180px;
@@ -1284,5 +1284,5 @@ body {
   width: 12px;
   height: 12px;
   border-radius: 2px;
-  background: url("/img/check.png") center no-repeat;
+  background: url("../img/check.png") center no-repeat;
 }
